--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <div class="depan fs" id="depan"></div>
 <div class="belakang" id="belakang">Hello Ktupad</div>
 <script type="text/javascript" src="ktupad.js"></script>
+<script type="text/javascript" src="android.js"></script>
 <script type="text/javascript" src="init.js"></script>
 <script type="text/javascript" src="app.js"></script>
 </body>
